# sdk

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Makefile  OWNERS  README.md  RELEASE.md  ROADMAP.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml  feature_request.yaml
.github/workflows/: check-pr-title.yaml  gh-workflow-approve.yaml  github-stale.yaml  lint-test.yaml  release.yml  test-e2e.yaml  test-python.yaml  welcome-new-contributors.yaml
CHANGELOG/: CHANGELOG-0.1.md  CHANGELOG-0.2.md
docs/proposals/2-trainer-local-execution/: README.md
docs/proposals/46-hyperparameter-optimization/: README.md
examples/: README.md
kubeflow/: __init__.py
kubeflow/common/: constants.py  types.py  utils.py
kubeflow/optimizer/: __init__.py
kubeflow/optimizer/api/: optimizer_client.py
kubeflow/optimizer/backends/: __init__.py  base.py
kubeflow/optimizer/backends/kubernetes/: backend.py  utils.py
kubeflow/optimizer/constants/: constants.py
kubeflow/optimizer/types/: algorithm_types.py  optimization_types.py  search_types.py
kubeflow/trainer/: __init__.py
kubeflow/trainer/api/: __init__.py  trainer_client.py  trainer_client_test.py
kubeflow/trainer/backends/: __init__.py  base.py  k8s.py  local_process.py
kubeflow/trainer/backends/container/: backend.py  backend_test.py  runtime_loader.py  runtime_loader_test.py  types.py  utils.py
kubeflow/trainer/backends/container/adapters/: base.py  docker.py  podman.py
kubeflow/trainer/backends/kubernetes/: backend.py  backend_test.py  constants.py  k8s.py  types.py  utils.py  utils_test.py
kubeflow/trainer/backends/local/: job.py  local_process.py  runtimes.py  types.py
kubeflow/trainer/backends/localprocess/: README.md  backend.py  backend_test.py  constants.py  job.py  resource_manager.py  runtimes.py  types.py  utils.py
kubeflow/trainer/constants/: constants.py  local_exec_constants.py
kubeflow/trainer/local/: job.py  resource_manager.py  runtimes.py
kubeflow/trainer/options/: __init__.py  common.py  kubernetes.py  kubernetes_test.py  localprocess.py
kubeflow/trainer/test/: common.py
kubeflow/trainer/types/: backends.py  local.py  types.py  types_test.py
kubeflow/trainer/utils/: local.py  utils.py  utils_test.py
proposals/2-trainer-local-execution/: README.md
python/: pyproject.toml
python/kubeflow/trainer/: __init__.py
python/kubeflow/trainer/api/: trainer_client.py  trainer_client_test.py
python/kubeflow/trainer/backends/: __init__.py  base.py  docker_backend.py  k8s.py  local_process.py  podman_backend.py  subprocess_backend.py
python/kubeflow/trainer/constants/: constants.py
python/kubeflow/trainer/local/: job.py  resource_manager.py  runtimes.py
python/kubeflow/trainer/types/: backends.py  types.py
python/kubeflow/trainer/utils/: local.py  utils.py
scripts/: gen-changelog.py
